fix: tighten spacing between thumbs

--- a/layouts/partials/modules/hall-of-mirrors/inline.css.html
+++ b/layouts/partials/modules/hall-of-mirrors/inline.css.html
@@ -24,4 +24,12 @@
   [itemprop="caption description"] {
     font-size: small;
   }
+  figure {
+    margin: 2px;
+    line-height: 10px;
+  }
+  figure a {
+    height: 0;
+    display: inline-block;
+  }
 </style>
