Fix missing partial error

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -116,8 +116,8 @@
   </article>
 {{ end }}
 {{ define "footer" }}
-  {{ partial "powered-by.html" . }}
-  {{ partial "cookie-disclaimer.html" . }}
+  {{/* partial "powered-by.html" . */}}
+  {{/* partial "cookie-disclaimer.html" . */}}
 
 
   {{/* NOTE: BEGIN MODULE CUSTOM */}}
